rename like for capybara test

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -12,7 +12,7 @@
         = link_to "Sign out", signout_path, id: "sign_out"
     -else
       %li
-        = link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in"
+        = link_to "Sign in", "/auth/google_oauth2", id: "sign_in"
   %a.button-collapse{"data-activates" => "slide-out", :href => "#"}
     %i.mdi-navigation-menu
   %ul.right.flow-text
