--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -8,6 +8,8 @@
               %strong Your Time is Valuable!
             %p.flow-text
               %strong Get Help Now!
+            %p.flow-text
+              Sign up as a Customer
     .col.m6
       .card.center-align.greeting-dev
         %a{:href => "/auth/google_oauth2?role=developer"}
