--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -2,12 +2,13 @@
   .row
     .col.l6.s12
       %h5.white-text FooBr
-      %p.grey-text.text-lighten-4 Content here.
+      %p.grey-text.text-lighten-4 Your time is valuable
     .col.l4.offset-l2.s12
       %h5.white-text Links
       %ul
         %li
-          %a.grey-text.text-lighten-3{:href => "#!"} Link 1
-  .footer-copyright
-    © 2015 Copyright
-    %a.grey-text.text-lighten-4.right{:href => "#!"} More Links
+          %a.grey-text.text-lighten-3{:href => "#!"} About
+        %li
+          %a.grey-text.text-lighten-3{:href => "#!"} Contact
+    .col.m12.white-text
+      © 2015 Copyright
