--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,2 +1,6 @@
-%h1 Users#show
-%p Find me in app/views/users/show.html.haml
+- if current_user.role == 'customer'
+  = render "users/customer_profile"
+-else
+  = render "users/developer_profile"
+
+
