add feature spec for developer to update profile
- add 'experience' to form
- update developer_profile partial
- make profile button specific to role
- add experience to user_params
- add flash msg's to Session#create
- add flash display code to app layout
- add 'info' to path for data

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -5,10 +5,10 @@
       %i.mdi-navigation-menu
     %ul#nav.right.flow-text
       -if current_user
-        %li.pad-right.hide-on-med-and-down
-          = link_to "Profile", user_path(current_user), id: "user_show"
-        %li.pad-right.hide-on-med-and-down
-          Signed in as
+        %li.pad-sides.hide-on-med-and-down
+          = link_to "#{current_user.role.titlecase} Profile", user_path(current_user), id: "profile"
+        %li.pad-sides.hide-on-med-and-down
+          "Signed in as"
           = succeed "!" do
             %strong= current_user.name
         %li
@@ -18,13 +18,13 @@
           = link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in"
     %ul#slide-out.side-nav.flow-text
       -if current_user
-        %li.pad-right.hide-on-med-and-up.black
+        %li.pad-sides.hide-on-med-and-up.black
           Signed in as
           = succeed "!" do
             %strong= current_user.name
-        %li.pad-right.hide-on-med-and-up
-          = link_to "Profile", user_path(current_user), id: "user_show"
-        %li.pad-right.hide-on-med-and-up
+        %li.pad-sides.hide-on-med-and-up
+          = link_to "#{current_user.role.titlecase} Profile", user_path(current_user), id: "user_show"
+        %li.pad-sides.hide-on-med-and-up
           = link_to "Sign out", signout_path, id: "sign_out"
       -else
         %li
