--- a/app/views/users/_developer_profile.html.haml
+++ b/app/views/users/_developer_profile.html.haml
@@ -2,32 +2,46 @@
   .col.m8.offset-m2
     #h1.center-align
       Developer Profile
-      = link_to "Edit Profile", edit_user_path(current_user), id: "edit_profile"
+      %br
+      = link_to "Edit", edit_user_path(current_user), id: "edit_profile"
+
 .row
-  .col.m12
-    .card-panel.black.center-panel
-      %ul.white-text
-        %li
-          %span.white-text
-            Name
-            = current_user.name
-        %li
-          %span.white-text
-            Email
-            = current_user.email
-        %li
-          %span.white-text
-            Company Name
-            = current_user.company_name
-        %li
-          %span.white-text
-            Experience
-            = current_user.experience
-        %li
-          %span.white-text
-            Areas of Expertise
+  .col.s12.m8.offset-m2.l6.offset-l3
+    .card-panel.grey.lighten-5.z-depth-1
+      .row.valign-wrapper
+        .col.s2
+          %img.circle.responsive-img
+            =image_tag current_user.image, { class: "circle", alt: "Picture of Developer" }
+
+        .col.s10
+          %span.black-text
+            #{current_user.name}
+
+      .row
+        .col.m12
+          .card-panel.center-panel
             %ul
-            - current_user.specialties.each do |area|
               %li
-                = area
+                %span
+                  Name
+                  = current_user.name
+              %li
+                %span
+                  Email
+                  = current_user.email
+              %li
+                %span
+                  Company Name
+                  = current_user.company_name
+              %li
+                %span
+                  Experience
+                  = current_user.experience
+              %li
+                %span
+                  Specialties
+                  %ul
+                  - current_user.specialties.each do |area|
+                    %li
+                      = area
 
