add feature spec for developer adding specialty
- update index and edit links
- add specialty params
- add specialties 'new' view
- add search field on root page
- clean up oath data

--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -20,6 +20,13 @@
               %strong Help Now!
             %p.flow-text
               Sign up as a Developer
+
+.row
+  .col.m12
+    %input.search-specialty{type: 'text'}
+    %label{} Search by Specialty
+
+
 .row
   .col.m12
     %table.bordered.centered.hoverable.z-depth-5.white
@@ -30,65 +37,65 @@
           %th{"data-field" => "name"} Dev Name
           %th{"data-field" => "expertise"} Areas of Expertise
       %tbody
-        %tr
+        %tr.developer
           %td 8
           %td 8
-          %td Suzie
+          %td.name Suzie
           %td Ruby Rails
-        %tr
+        %tr.developer
           %td 8
           %td 2
-          %td Alan
+          %td.name Alan
           %td Php Word-Press
-        %tr
+        %tr.developer
           %td 7
           %td 12
-          %td Jonathan
+          %td.name Jonathan
           %td Html Css
-        %tr
+        %tr.developer
           %td 6
           %td 8
-          %td Suzie
+          %td.name Suzie
           %td Ruby Rails
-        %tr
+        %tr.developer
           %td 6
           %td 2
-          %td Alan
+          %td.name Alan
           %td Php Word-Press
-        %tr
+        %tr.developer
           %td 4
           %td 12
-          %td Jonathan
+          %td.name Jonathan
           %td Html Css
-        %tr
+        %tr.developer
           %td 4
           %td 8
-          %td Suzie
+          %td.name Suzie
           %td Ruby Rails
-        %tr
+        %tr.developer
           %td 2
           %td 2
-          %td Alan
+          %td.name Alan
           %td Php Word-Press
-        %tr
+        %tr.developer
           %td 2
           %td 12
-          %td Jonathan
+          %td.name Jonathan
           %td Html Css
-        %tr
+        %tr.developer
           %td 2
           %td 8
-          %td Suzie
+          %td.name Suzie
           %td Ruby Rails
-        %tr
+        %tr.developer
           %td 1
           %td 2
-          %td Alan
+          %td.name Alan
           %td Php Word-Press
-        %tr
+        %tr.developer
           %td 1
           %td 12
-          %td Jonathan
+          %td.name Jonathan
           %td Html Css
 
 
