--- a/app/views/specialties/index.html.haml
+++ b/app/views/specialties/index.html.haml
@@ -1,5 +1,5 @@
 - @specialties. each do |specialty|
   = specialty
 
-= link_to "new specialty", new_specialty_path
+= link_to "Add Specialty", new_specialty_path
 
