--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -18,4 +18,4 @@
           = f.submit "Update My Profile"
 .row
   .col.m12
-    =link_to "Add Specialties", specialties_path
+    =link_to "View Specialties", specialties_path
