update jquery to search for specialties

--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -41,62 +41,62 @@
           %td 8
           %td 8
           %td.name Suzie
-          %td Ruby Rails
+          %td.specialty Ruby Rails
         %tr.developer
           %td 8
           %td 2
           %td.name Alan
-          %td Php Word-Press
+          %td.specialty Php Word-Press
         %tr.developer
           %td 7
           %td 12
           %td.name Jonathan
-          %td Html Css
+          %td.specialty  Html Css
         %tr.developer
           %td 6
           %td 8
           %td.name Suzie
-          %td Ruby Rails
+          %td.specialty Ruby Rails
         %tr.developer
           %td 6
           %td 2
           %td.name Alan
-          %td Php Word-Press
+          %td.specialty Php Word-Press
         %tr.developer
           %td 4
           %td 12
           %td.name Jonathan
-          %td Html Css
+          %td.specialty Html Css
         %tr.developer
           %td 4
           %td 8
           %td.name Suzie
-          %td Ruby Rails
+          %td.specialty Ruby Rails
         %tr.developer
           %td 2
           %td 2
           %td.name Alan
-          %td Php Word-Press
+          %td.specialty Php Word-Press
         %tr.developer
           %td 2
           %td 12
           %td.name Jonathan
-          %td Html Css
+          %td.specialty Html Css
         %tr.developer
           %td 2
           %td 8
           %td.name Suzie
-          %td Ruby Rails
+          %td.specialty Ruby Rails
         %tr.developer
           %td 1
           %td 2
           %td.name Alan
-          %td Php Word-Press
+          %td.specialty Php Word-Press
         %tr.developer
           %td 1
           %td 12
           %td.name Jonathan
-          %td Html Css
+          %td.specialty Html Css
 
 
 
