add @developers to home show
- fix specialties new, create, and params
- add specialty_name to model

--- a/app/views/specialties/index.html.haml
+++ b/app/views/specialties/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Specialty List
 
 - @specialties. each do |specialty|
-  = specialty
+  = specialty.specialty_name
 
 = link_to "Add Specialty", new_specialty_path
 
