--- a/app/views/specialties/index.html.haml
+++ b/app/views/specialties/index.html.haml
@@ -1,7 +1,9 @@
-%h1 Specialty List
+%ul.collection.with-header
+  %li.collection-header
+    %h4 Specialties
+    = link_to "Add Specialty", new_specialty_path
+  - @specialties. each do |specialty|
+    %li.collection-item
+      = specialty.specialty_name
 
-- @specialties. each do |specialty|
-  = specialty.specialty_name
-
-= link_to "Add Specialty", new_specialty_path
 
