Replace hard coded data with dynamic data from the developers

--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -55,66 +55,9 @@
           %th{"data-field" => "name"} Dev Name
           %th{"data-field" => "expertise"} Areas of Expertise
       %tbody
-        %tr.developer
-          %td 8
-          %td 8
-          %td.name Suzie
-          %td.specialty Ruby Rails
-        %tr.developer
-          %td 8
-          %td 2
-          %td.name Alan
-          %td.specialty Php Word-Press
-        %tr.developer
-          %td 7
-          %td 12
-          %td.name Jonathan
-          %td.specialty  Html Css
-        %tr.developer
-          %td 6
-          %td 8
-          %td.name Suzie
-          %td.specialty Ruby Rails
-        %tr.developer
-          %td 6
-          %td 2
-          %td.name Alan
-          %td.specialty Php Word-Press
-        %tr.developer
-          %td 4
-          %td 12
-          %td.name Jonathan
-          %td.specialty Html Css
-        %tr.developer
-          %td 4
-          %td 8
-          %td.name Suzie
-          %td.specialty Ruby Rails
-        %tr.developer
-          %td 2
-          %td 2
-          %td.name Alan
-          %td.specialty Php Word-Press
-        %tr.developer
-          %td 2
-          %td 12
-          %td.name Jonathan
-          %td.specialty Html Css
-        %tr.developer
-          %td 2
-          %td 8
-          %td.name Suzie
-          %td.specialty Ruby Rails
-        %tr.developer
-          %td 1
-          %td 2
-          %td.name Alan
-          %td.specialty Php Word-Press
-        %tr.developer
-          %td 1
-          %td 12
-          %td.name Jonathan
-          %td.specialty Html Css
-
-
-
+        - @developers.each do |developer|
+          %tr.developer
+            %td 8
+            %td 8
+            %td.name= developer.name
+            %td.specialty= developer.specialty_names.join(" ")
