Did a really important fix

--- a/app/views/specialties/new.html.haml
+++ b/app/views/specialties/new.html.haml
@@ -8,3 +8,5 @@
           = f.label :specialty_name
           = f.text_field :specialty_name
           = f.submit "Submit"
+
+  OMG THIS FIX WAS REALLY IMPORTANT
