fix specialty index
Index page was displaying all of the 'user.specialties'. This may have
to change to a many-to-many relationship with a user-specialties join
table.

--- a/app/views/specialties/index.html.haml
+++ b/app/views/specialties/index.html.haml
@@ -4,6 +4,6 @@
     = link_to "Add Specialty", new_specialty_path
   - @specialties. each do |specialty|
     %li.collection-item
-      = specialty.specialty_name
+      = specialty
 
 
