test calendar route
Remove the require for the google/apis/calendar_v3
Added a calendars controller and created a
primary action.

--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -22,6 +22,11 @@
               %p.flow-text
                 Sign up as a Developer
 
+.row
+  .col.m12
+    = link_to "Primary Calendar", calendars_primary_path
+
+
   .row
     .col.m12
       %input.search-specialty{type: 'text'}
