--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,13 +1,14 @@
-.row
-  .col.m8.offset-2
-  -if current_user.role == 'customer'
-    .card.center-panel.center-align.black
-      .card-content.grey-text.new_project
+.container
+  .row
+    .col.s12
+    -if current_user.role == 'client'
+      .card.center-panel
+        .card-content.new_project
 
-        = form_for @project do |f|
-          = f.label :name
-          = f.text_field :name
-          = f.label :description
-          = f.text_area :description
+          = form_for @project do |f|
+            = f.label :name
+            = f.text_field :name
+            = f.label :description
+            = f.text_area :description
 
-          = f.submit "Create Project"
+            = f.submit "Create Project"
