add jquery ui autocomplete for specialties
installed responders and jquery-ui-sass-rails
gems.

added route to get all specialties using ajax.

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -47,6 +47,9 @@
     .col.s6.right-align
       %h5
         =link_to "View Specialties", specialties_path
+      .ui-widget
+        %label{:for => "tags"} Tags:
+        %input#tags
   .row
     .col.s12
       %ul.collection.with-header
