--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,8 @@
     = render 'shared/nav'
     -if current_user
       - flash.each do |name, msg|
-        = content_tag :div, msg, class: name
+        .center-align
+          = content_tag :div, msg, class: name
 
     = yield
     = render 'shared/footer'
